chore: rename repo

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=ait:temp_jenkins_laravel
-sonar.projectName=Temp Jenkins Laravel
+sonar.projectKey=example_jenkins_laravel
+sonar.projectName=Example Laravel
 
 sonar.sourceEncoding=UTF-8
 
