--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=example_jenkins_laravel
-sonar.projectName=Example Laravel
+sonar.projectKey=example_jenkins_laravel2
+sonar.projectName=Example Laravel 2
 
 sonar.sourceEncoding=UTF-8
 
